edits before day 2

--- a/module-1/sml-1-conceptual-overview.html
+++ b/module-1/sml-1-conceptual-overview.html
@@ -439,7 +439,6 @@
 </section>
 <section id="a-spectrum-of-interpretability" class="slide level2">
 <h2>A Spectrum of Interpretability</h2>
-<p>The choice of model often involves a trade-off between predictive power and how easily we can understand its inner workings:</p>
 <ul>
 <li><strong>Transparent Box:</strong> Models where the relationship between inputs and outputs is clear.
 <ul>
@@ -489,10 +488,6 @@
 <ul>
 <li><em>k</em>-nearest neighbors (instance-based, less of a “model” in the traditional sense)</li>
 </ul></li>
-<li><strong>Different Processes:</strong>
-<ul>
-<li>Ensemble models (combining predictions from multiple models)</li>
-</ul></li>
 </ul>
 <aside class="notes">
 <p>This expands on the points on the last slide and includes algorithms that are fundamentally different – they aren’t really “boxes” in the sense the models are - they’re rules-based, and while the rules can be interrogated, the process is fairly scrutinizable (but really complex!).</p>
@@ -519,12 +514,7 @@
 <li>A balance of both (prediction + some explanation -&gt; gray box)?</li>
 </ul></li>
 <li><p><strong>Don’t look for a magic answer!</strong> No model perfectly reflects reality. Resist the urge to let the model “tell you the answer” without critical thought.</p></li>
-<li><p><strong>Understand your tools:</strong> Even if prediction is the goal, knowing <em>how</em> your chosen model works (its assumptions, strengths, weaknesses) helps you:</p>
-<ul>
-<li>Troubleshoot problems.</li>
-<li>Interpret results appropriately (even if it’s just performance metrics).</li>
-<li>Build <em>better</em>, more reliable predictive systems.</li>
-</ul></li>
+<li><p><strong>Understand your tools:</strong> Even if prediction is the goal, knowing <em>how</em> your chosen model works (its assumptions, strengths, weaknesses) helps you:</p></li>
 </ul>
 <aside class="notes">
 <p>This invites students to really think hard about what they are trying to do.</p>
