--- a/module-2/sml-2-conceptual-overview.html
+++ b/module-2/sml-2-conceptual-overview.html
@@ -179,12 +179,15 @@
 <h1>Key Concept #1: Our SML framework</h1>
 
 </section>
-<h3 id="overview">Overview</h3>
+<section id="overview" class="slide level2">
+<h2>Overview</h2>
 <ul>
 <li>We want to make predictions about an outcome of interest based on predictor (or independent) variable(s) that we think are related to the outcome (or dependent variable).</li>
 <li>We’ll continue using <a href="https://nces.ed.gov/ipeds/">IPEDS, the Integrated Postsecondary Education Data System</a> data to predict institutional graduation rates.</li>
 </ul>
-<h3 id="laser-frame-reminder">LASER Frame (reminder)</h3>
+</section>
+<section id="laser-frame-reminder" class="slide level2">
+<h2>LASER Frame (reminder)</h2>
 <ol type="1">
 <li><strong>Prepare</strong>: Prior to analysis, we’ll take a look at the context from which our data came, formulate some questions, and load R packages.</li>
 <li><strong>Wrangle</strong>: In the wrangling section, we will learn some basic techniques for manipulating, cleaning, transforming, and merging data.</li>
@@ -192,7 +195,9 @@
 <li><strong>Model</strong>: In this step, we carry out the analysis - here, supervised machine learning.</li>
 <li><strong>Communicate</strong>: Interpreting and communicating the results of our findings is the last step.</li>
 </ol>
-<h3 id="sml-frame-mostly-new">SML Frame (mostly new!)</h3>
+</section>
+<section id="sml-frame-mostly-new" class="slide level2">
+<h2>SML Frame (mostly new!)</h2>
 <ol type="1">
 <li><strong>Split data</strong> (Prepare)<br>
 </li>
@@ -203,7 +208,8 @@
 <li><strong>Fit model</strong> (Model)</li>
 <li><strong>Evaluate accuracy</strong> (Communicate)</li>
 </ol>
-<p><strong>This is the fundamental process we’ll follow for this and the next two modules focused on supervised ML</strong></p></section>
+<p><strong>This is the fundamental process we’ll follow for this and the next two modules focused on supervised ML</strong></p>
+</section></section>
 <section>
 <section id="key-concept-2-training-and-testing-data" class="title-slide slide level1 center">
 <h1>Key Concept #2: Training and testing data</h1>
