update discussion questions

--- a/module-2/sml-2-conceptual-overview.html
+++ b/module-2/sml-2-conceptual-overview.html
@@ -168,7 +168,7 @@
 </div>
 <div id="tabset-1-2">
 <ul>
-<li>How might presenting the results of a machine learning model differ from presenting those from a more traditional (“explanatory”) model?</li>
+<li>Please revisit the “structure” of your machine learning topic of interest - what’s the dependent variable, and what are the independent variables? Why do good predictions have value?</li>
 </ul>
 </div>
 </div>
@@ -357,7 +357,7 @@ Regardless of model, we often wish to balance between bias and variance—to bal
 </div>
 <div id="tabset-2-2">
 <ul>
-<li>What data or context are you interested in for your use of SML?</li>
+<li>What implications (if any) does this module have on how you are thinking of the structure of your machine learning analysis?</li>
 </ul>
 </div>
 </div>
